--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -40,10 +40,48 @@ body
 		margin-left:10px
 	}
 }
+#sortable{
+	list-style-type none
+	margin 10px
+	padding 0px
+	width 480px
+	text-align center
+	li{
+		cursor pointer
+		float left
+		color gray
+		background-color white
+		margin-top 2.5px
+		padding 5px
+		margin-left 0px
+		margin-right 0px
+		text-align center
+		width 385px
+		border 1px dotted gray
+		margin-bottom 2.5px
+	}
+	li:hover{
+		cursor pointer
+		float left
+		color white
+		background-color gray
+		margin-top 2.5px
+		padding 5px
+		margin-left 0px
+		margin-right 0px
+		text-align center
+		width 385px
+		border 1px dotted gray
+		margin-bottom 2.5px
+	}
+}
 
 // account form on signup & home page //
 
 #account-form-container
+	width 460px
+	margin 100px auto
+#document-form-container
 	width 460px
 	margin 100px auto
 #country-list
