--- a/app/server/views/upload.jade
+++ b/app/server/views/upload.jade
@@ -1,4 +1,4 @@
 h1 Upload File
 form(method="POST", action="/upload", enctype="multipart/form-data")
-    input(type="file", name="file")
+    input(type="file", multiple="multiple", name="file")
     input(type="submit")
