--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -24,6 +24,7 @@ block content
 block scripts
 	script(src='/vendor/jquery.min.js')
 	script(src='/vendor/jquery.form.js')
+	script(src='/vendor/jquery-ui.js')
 	script(src='/vendor/bootstrap-modal.js')
 	script(src='/vendor/bootstrap-transition.js')
 	script(src='/js/views/home.js')
