--- a/app/server/views/new-document.jade
+++ b/app/server/views/new-document.jade
@@ -1,6 +1,6 @@
 - user = typeof(udata) != 'undefined' ? udata : { }
 
-#account-form-container
+#document-form-container
 	form( method="post")#document-form.form-horizontal.well.span6
 		div.panel.panel-default
 		h3 Create a document
