--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -7,6 +7,8 @@ block content
 			div.container-fluid
 				ul#global-nav.nav.pull-left
 					a(href='#').brand DocuFast
+				button#btn-compile.btn.btn-success
+						| Compile!
 				a(href='/account')
 					button#btn-control-panel.btn.btn-default
 						i.icon-user
