--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -7,7 +7,7 @@ block content
 			div.container-fluid
 				ul#global-nav.nav.pull-left
 					a(href='#').brand DocuFast
-				button#btn-compile.btn.btn-success
+				button#btn-compile.btn.btn-success(style='display:none')
 						| Compile!
 				a(href='/account')
 					button#btn-control-panel.btn.btn-default
