--- a/app/server/views/upload.jade
+++ b/app/server/views/upload.jade
@@ -1,4 +1,5 @@
-h1 Upload File
+h1 Upload Files
+p Important note: Avoid empty spaces and non-alphanumeric characters in the file name.
 form(method="POST", action="/upload", enctype="multipart/form-data")
-    input(type="file", multiple="multiple", name="file")
-    input(type="submit")
+	input(type="file", multiple="multiple", name="file")
+	input(type="submit")
