--- a/app/server/views/login.jade
+++ b/app/server/views/login.jade
@@ -6,7 +6,7 @@ block content
 		#login-container
 			form( method="post")#login-form.well.span4
 				h1 DocuFast
-				p.subheading An easy-to-use documentation tool
+				p.subheading Merge PDFs in less than a minute!
 				label Username 
 				input(type="text", name="user", id='user-tf').span4.required
 				label Password
