--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
 	head
-		title Node.js Login
+		title DocuFast -Merge PDFs in less than a minute-
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
 		script(type='text/javascript')
